Deployments/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-hall
spec:
  rules:
  - host: www.examhall.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: examhall-service 
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: examhall-webservice
            port:
              number: 80
